--- a/index.html
+++ b/index.html
@@ -11,21 +11,68 @@
   
  
 <h2>Week 1</h2>
+ <ul>
+  	<li>
+      <a href="about/index.html">In-Class Exercises</a>
+    </li>
+    <li style="color: #F90">
+      <a href="orange.html">Homework</a>
+    </li>
+  </ul>
 
  
 <h2>Week 2</h2>
-
+ <ul>
+  	<li>
+      <a href="about/index.html">In-Class Exercises</a>
+    </li>
+    <li style="color: #F90">
+      <a href="orange.html">Homework</a>
+    </li>
+  </ul>
  
 <h2>Week 3</h2>
 
- 
+ <ul>
+  	<li>
+      <a href="about/index.html">In-Class Exercises</a>
+    </li>
+    <li style="color: #F90">
+      <a href="orange.html">Homework</a>
+    </li>
+  </ul>
+
 <h2>Week 4</h2>
 
- 
+ <ul>
+  	<li>
+      <a href="about/index.html">In-Class Exercises</a>
+    </li>
+    <li style="color: #F90">
+      <a href="orange.html">Homework</a>
+    </li>
+  </ul>
+
 <h2>Week 5</h2>
+ <ul>
+  	<li>
+      <a href="about/index.html">In-Class Exercises</a>
+    </li>
+    <li style="color: #F90">
+      <a href="orange.html">Homework</a>
+    </li>
+  </ul>
 
  
 <h2>Week 6</h2>
+<ul>
+  	<li>
+      <a href="about/index.html">In-Class Exercises</a>
+    </li>
+    <li style="color: #F90">
+      <a href="orange.html">Homework</a>
+    </li>
+  </ul>
 
 
 
